--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"aos": "^2.3.4",
 		"clsx": "^2.1.1",
 		"next": "15.1.5",
 		"react": "^19.0.0",
@@ -18,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@types/aos": "^3.0.7",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
