--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"aos": "^2.3.4",
 		"clsx": "^2.1.1",
+		"firebase": "^11.2.0",
 		"next": "15.1.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
