--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.5",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.3",
 		"postcss": "^8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.10",
