--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 		"aos": "^2.3.4",
 		"clsx": "^2.1.1",
 		"firebase": "^11.2.0",
+		"keen-slider": "^6.8.6",
+		"lucide-react": "^0.475.0",
 		"next": "15.1.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"swiper": "^11.2.2",
 		"tailwind-merge": "^2.6.0"
 	},
 	"devDependencies": {
