--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-fast-marquee": "^1.6.5",
+		"react-hot-toast": "^2.5.1",
 		"swiper": "^11.2.2",
 		"tailwind-merge": "^2.6.0"
 	},
