--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -3,9 +3,9 @@
 runConfig:
   minInstances: 1
   maxInstances: 2
+  cpu: 1
+  memoryMiB: 1024
   # concurrency: 80
-  # cpu: 1
-  # memoryMiB: 512
 
   # Environment variables and secrets.
   # env:
