--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
-		"start": "next build && next start",
+		"start": "next build && next start -p 8080",
 		"lint": "next lint",
 		"format": "prettier --write ."
 	},
