--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,10 +1,10 @@
 # Settings for Backend (on Cloud Run).
 # See https://firebase.google.com/docs/app-hosting/configure#cloud-run
 runConfig:
-  minInstances: 1
-  maxInstances: 2
-  cpu: 1
-  memoryMiB: 1024
+  minInstances: 0
+#  maxInstances: 2
+#  cpu: 1
+#  memoryMiB: 1024
   # concurrency: 80
 
   # Environment variables and secrets.
