--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,7 +4,7 @@ runConfig:
   minInstances: 0
 #  maxInstances: 2
 #  cpu: 1
-#  memoryMiB: 1024
+  memoryMiB: 1024
   # concurrency: 80
 
   # Environment variables and secrets.
